--- a/rulex-api/pom.xml
+++ b/rulex-api/pom.xml
@@ -7,6 +7,14 @@
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>3.5.0</version> <!-- Or whatever version you intend to use -->
+    <relativePath/> <!-- lookup parent from repository -->
+  </parent>
+
+
   <name>rulex-api</name>
   <url>http://maven.apache.org</url>
 
@@ -35,6 +43,12 @@
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi</artifactId>
+      <version>5.3.0</version>
     </dependency>
   </dependencies>
 </project>
